# oxa

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  justfile
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: clippy.yml  docs.yml  fmt.yml  test.yml
ast_generator/: Cargo.toml
ast_generator/src/: generator.rs  main.rs
oxa/: Cargo.toml  Readme.md  build.rs
oxa/src/: environment.rs  interpreter.rs  lib.rs  object.rs  oxa.rs  parser.rs  scanner.rs  token.rs
oxa/src/ast/: expr.rs  printer.rs  stmt.rs
oxa/src/errors/: mod.rs  reporter.rs
scripts/: coverage.sh  generate_ast.rs
src/: ast_printer.rs  error.rs  interpreter.rs  lib.rs  main.rs  object.rs  oxa.rs  parser.rs  reporter.rs  scanner.rs  token.rs
src/ast/: expr.rs  printer.rs
