[package]
name = "oxa"
version = "0.0.1"
edition = "2021"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml"]
license = "MIT"
default-run = "oxa"

[[bin]]
name = "oxa"
path = "src/bin/main.rs"
doc = false

[lib]
name = "oxa"
path = "src/lib.rs"
test = true
doctest = true
doc = true

build = "build.rs"

buildit = "build.rs"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
debug = 0
strip = "symbols"
opt-level = 3

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
phf = { version = "0.11.1", features = ["macros"] }
