[workspace]
resolver = "2"
members = ["ast_generator", "oxa"]

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true # VERY slightly smaller wasm
incremental = false
# opt-level = 's' # 10-20% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unecessarily large wasm for no performance gain

# debug = true # include debug symbols, useful when profiling wasm

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
