[package]
name = "oxa"
version = "0.0.1"
edition = "2021"
readme = "README.md"
include = ["src/*.rs", "Cargo.toml"]
license = "MIT"
default-run = "oxa"

[[bin]]
name = "oxa"
path = "src/bin/main.rs"
doc = false

[lib]
name = "oxa"
path = "src/lib.rs"
test = true
doctest = true
doc = true

build = "build.rs"

[[bench]]
name = "oxa"
harness = false

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
phf = { version = "0.11.1", features = ["macros"] }

[dev-dependencies]
criterion = "0.4.0"
